--- a/style.scss
+++ b/style.scss
@@ -38,10 +38,17 @@ body {
 
 .header {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+	align-items: center;
+	height: 116px;
+	.wrapper {
+		height: 50%;
+		width: 90%;
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+	}
 	&__item {
-		margin-top: 30px;
-		padding-bottom: 30px;
 		&:first-child {
 			margin-left: 80px;
 		}
@@ -51,6 +58,9 @@ body {
 	}
 	.nav__item:not(:last-child) {
 		margin-right: 31px;
+	}
+	.nav__link {
+		font-size: 18px;
 	}
 	&__button {
 		color: $orange;
@@ -65,6 +75,8 @@ body {
     font-family: 'Homemade Apple', cursive;
     font-weight: 400;
     font-size: 18px;
+	text-decoration: none;
+	color: black;
 }
 
 .nav {
@@ -89,12 +101,24 @@ body {
 .find {
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
+	grid-template-rows: 700px;
 	&__item:first-child {
 		background-color: $gray2;
-		padding: 155px 125px 135px 160px;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		.wrapper {
+			width: 60%;
+			height: 60%;
+		}
 	}
 	&__item:last-child {
-		object-fit: cover;
+		background-image: url(../img/couple.svg);
+		width: 100%;
+		height: 100%;
+		background-size: cover;
+
 	}
 	&__title {
 		font-family: 'Gilroy-SemiBold';
@@ -104,6 +128,7 @@ body {
 	&__description {
 		font-size: 20px;
 		margin-bottom: 52px;
+		line-height: 28px;
 	}
 	&__button {
 		background-color: $orange;
@@ -116,12 +141,24 @@ body {
 .more {
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
+	grid-template-rows: 600px;
 	&__item:first-child {
 		background-image: url(../img/more.svg);
+		background-size: cover;
+		width: 100%;
+		height: 100%;
 	}
 	&__item:last-child {
-		padding: 165px 165px 104px 112px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-direction: column;
 		background-color: $gray2;
+		.wrapper {
+			width: 60%;
+			height: 60%;
+			margin-top: 20%;
+		}
 	}
 	&__title {
 		font-size: 32px;
@@ -130,6 +167,7 @@ body {
 	&__description {
 		font-size: 20px;
 		margin-bottom: 35px;
+		line-height: 28px;
 	}
 	&__button {
 		width: 200px;
@@ -141,6 +179,7 @@ body {
 .h2 {
 	font-size: 32px;
 	text-align: center;
+	margin-bottom: 25px;
 }
 .offer {
 	font-size: 18px;
@@ -151,10 +190,18 @@ body {
 	&__options {
 		display: grid;
 		grid-template-columns: repeat(4, 1fr);
+		grid-template-rows: 440px;
 		gap: 30px;
 		margin-top: 60px;
 	}
-	padding: 60px 135px 135px 135px;
+	.wrapper {
+		width: 80%;
+		height: 70%;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		margin: 60px auto;
+	}
 	&__item {
 		width: 270px;
 		height: 436px;
@@ -182,14 +229,14 @@ body {
 	}
 	&__occasion {
 		font-size: 20px;
-		margin-top: 24px;
-		margin-left: 24px;
+		margin-top: 6%;
+		margin-left: 9%;
 	}
 	&__more {
 		font-family: 'Roboto', sans-serif;
 		font-size: 14px;
-		margin-top: 74px;
-		margin-left: 24px;
+		margin-top: 25%;
+		margin-left: 9%;
 		a {
 			color: black;
 		}
@@ -200,13 +247,22 @@ body {
 	background-color: $orange;
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
+	grid-template-rows: 240px;
+	margin-top: 140px;
 	&__item:first-child {
-		padding-left: 235px;
-		font-size: 32px;
-		span {
-			font-family: 'Gilroy-Bold';
-			font-size: 32px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-direction: column;
+		.wrapper {
+			width: 50%;
+			height: 30%;
+			span {
+				font-family: 'Gilroy-Bold';
+				font-size: 32px;
+			}
 		}
+		font-size: 32px;
 	}
 	&__item:last-child {
 		display: flex;
@@ -227,12 +283,15 @@ body {
 			margin-left: 16px;
 		}
 	}
-	padding-top: 80px;
-	padding-bottom: 60px;
 }
 
 .blog {
-	padding: 0 135px 80px 135px;
+	.wrapper {
+		width: 80%;
+	}
+	display: flex;
+	justify-content: center;
+	
 	&__item {
 		display: flex;
 		height: 370px;
@@ -240,16 +299,24 @@ body {
 	}
 	&__image {
 		background-image: url(../img/blog.svg);
-		width: 400px;
-
+		width: 35%;
+		background-repeat: no-repeat;
+		background-size: cover;
 	}
 	&__title {
+		justify-content: center;
+		align-items: center;
+		width: 65%;
+
+		.wrapper {
+			height: 70%;
+			width: 70%;
+
+		}
 		background-color: $dark-gray1;
 		display: flex;
 		flex-direction: column;
-		width: 770px;
 		color: #fff;
-		padding: 60px 200px 50px 78px;
 		&_name {
 			font-size: 14px;
 		}
@@ -266,9 +333,7 @@ body {
 		}
 	}
 	&__list {
-		display: grid;
-		grid-template-columns: repeat(2, 1fr);
-		gap: 30px;
+		display: flex;
 		justify-content: space-between;
 		height: 290px;
 	}
@@ -300,15 +365,73 @@ a {
 
 .footer {
 	background-color: $gray1;
+	height: 410px;
+	display: flex;
+	justify-content: center;
+	align-items: flex-end;
+	margin-top: 80px;
+	.wrapper {
+		width: 80%;
+		height: 80%;
+		display: flex;
+		justify-content: space-around;
+		flex-direction: column;
+	}
 	&__item {
 		display: flex;
 		justify-content: center;
 		flex-direction: row;
+		&:last-child {
+			font-size: 14px;
+		}
+		.nav {
+			margin: 0 auto;
+			&__link {
+				font-size: 14px;
+				font-family: 'Gilroy-Bold';
+			}
+		}
+		.nav__item:not(:last-child) {
+			margin-right: 81px;
+		}
+	}
+	&__logo {
+		color: $orange;
+	}
+	&__icon {
+		&:not(:last-child) {
+			margin-right: 24px;
+		}
+		a {
+			display: block;
+			width: 40px;
+			height: 40px;
+		}
+		.fb {
+			background-image: url(../img/fb.svg);
+		}
+		.tw {
+			background-image: url(../img/tw.svg);
+		}
+		.inst {
+			background-image: url(../img/inst.svg);
+		}
+		.yt {
+			background-image: url(../img/yt.svg);
+		}
+		.pint {
+			background-image: url(../img/pint.svg);
+		}
+	}
+	&__term-year {
+		margin-right: 14px;
 	}
 }
 
-hr {
-	width: 1000px;
-	display: block;
-	
+.hr {
+	//margin-top: 50px;
+	width: 100%;
+	height: 1px;
+	background-color: black;
 }
+
