--- a/_variables.scss
+++ b/_variables.scss
@@ -4,3 +4,21 @@ $gray2: #F1F1F2;
 $gray3: #F2F2F2;
 $dark-gray1: #231F20;
 $dark-gray2: #222222;
+
+@mixin breakpoint($point) {
+    @if $point == lg {
+        @media (max-width: 1200px){@content;}
+    }
+    @else if $point == md {
+        @media (max-width: 768px){@content;}
+    }
+    @else if $point == sm {
+        @media (max-width: 576px){@content;}
+    }
+    @else if $point == xs {
+        @media (max-width: 500px){@content;}
+    }
+    @else if $point == minlg {
+        @media (min-width: 993px){@content;}
+    }
+}
