--- a/_variables.scss
+++ b/_variables.scss
@@ -10,15 +10,15 @@ $dark-gray2: #222222;
         @media (max-width: 1200px){@content;}
     }
     @else if $point == md {
-        @media (max-width: 768px){@content;}
+        @media (max-width: 900px){@content;}
     }
     @else if $point == sm {
-        @media (max-width: 576px){@content;}
+        @media (max-width: 640px){@content;}
     }
     @else if $point == xs {
         @media (max-width: 500px){@content;}
     }
-    @else if $point == minlg {
-        @media (min-width: 993px){@content;}
+    @else if $point == minmd {
+        @media (min-width: 901px){@content;}
     }
 }
