--- a/style.scss
+++ b/style.scss
@@ -49,19 +49,22 @@ body {
     display: flex;
     justify-content: center;
 	align-items: center;
-	height: 116px;
-	@include breakpoint (md) {
-		height: 90px;
-	}
-	@include breakpoint (sm) {
-		height: 70px;
-	}
 	.wrapper {
 		height: 50%;
 		width: 90%;
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
+		margin-top: 40px;
+		margin-bottom: 40px;
+		@include breakpoint (md) {
+			margin-top: 30px;
+			margin-bottom: 30px;
+		}
+		@include breakpoint (sm) {
+			margin-top: 20px;
+			margin-bottom: 20px;
+		}
 	}
 	&__item {
 		&:first-child {
@@ -79,6 +82,15 @@ body {
 	}
 	.nav__link {
 		font-size: 20px;
+		&:hover {
+			opacity: 0.7;
+			color: $orange;
+			-moz-transition: all .25s ease-in-out;
+    		-webkit-transition: all .25s ease-in-out;
+    		-o-transition: all .25s ease-in-out;
+    		-ms-transition: all .25s ease-in-out;
+    		transition: all .25s ease-in-out;
+		}
 		@include breakpoint (lg) {
 			font-size: 22px;
 		}
@@ -89,6 +101,15 @@ body {
 		width: 150px;
 		height: 45px;
 		background-color: #fff;
+		&:hover {
+			color: #fff;
+			background-color: $orange;
+			-moz-transition: all .25s ease-in-out;
+    		-webkit-transition: all .25s ease-in-out;
+    		-o-transition: all .25s ease-in-out;
+    		-ms-transition: all .25s ease-in-out;
+    		transition: all .25s ease-in-out;
+		}
 		@include breakpoint (md) {
 			width: 120px;
 			height: 35px;
@@ -137,19 +158,6 @@ body {
 .find {
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
-	grid-template-rows: 700px;
-	@include breakpoint (lg) {
-		grid-template-rows: 500px;
-	}
-	@include breakpoint (md) {
-		grid-template-rows: 300px;
-	}
-	@include breakpoint (sm) {
-		grid-template-rows: 200px;
-	}
-	@include breakpoint (sm) {
-		grid-template-rows: 150px;
-	}
 	&__item:first-child {
 		background-color: $gray2;
 		display: flex;
@@ -159,6 +167,19 @@ body {
 		.wrapper {
 			width: 60%;
 			height: 60%;
+			margin: 140px auto;
+			@include breakpoint (lg) {
+				margin: 100px auto;
+			}
+			@include breakpoint (md) {
+				margin: 60px auto;
+			}
+			@include breakpoint (sm) {
+				margin: 40px auto;
+			}
+			@include breakpoint (sm) {
+				margin: 30px auto;
+			}
 		}
 	}
 	&__item:last-child {
@@ -216,6 +237,16 @@ body {
 		color: #fff;
 		width: 200px;
 		height: 60px;
+		border-color: $orange;
+		&:hover {
+			color: $orange;
+			background-color: #fff;
+			-moz-transition: all .25s ease-in-out;
+    		-webkit-transition: all .25s ease-in-out;
+    		-o-transition: all .25s ease-in-out;
+    		-ms-transition: all .25s ease-in-out;
+    		transition: all .25s ease-in-out;
+		}
 		@include breakpoint (lg) {
 			width: 160px;
 			height: 50px;
@@ -234,19 +265,6 @@ body {
 .more {
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
-	grid-template-rows: 600px;
-	@include breakpoint (lg) {
-		grid-template-rows: 400px;
-	}
-	@include breakpoint (md) {
-		grid-template-rows: 300px;
-	}
-	@include breakpoint (sm) {
-		grid-template-rows: 200px;
-	}
-	@include breakpoint (sm) {
-		grid-template-rows: 150px;
-	}
 	&__item:first-child {
 		background-image: url(../img/more.svg);
 		background-size: cover;
@@ -265,6 +283,19 @@ body {
 			display: flex;
 			flex-direction: column;
 			justify-content: space-around;
+			margin: 60px auto;
+			@include breakpoint (lg) {
+				margin: 40px auto;
+			}
+			@include breakpoint (md) {
+				margin: 30px auto;
+			}
+			@include breakpoint (sm) {
+				margin: 20px auto;
+			}
+			@include breakpoint (xs) {
+				margin: 15px auto;
+			}
 		}
 	}
 	&__title {
@@ -306,6 +337,15 @@ body {
 		width: 200px;
 		height: 60px;
 		color: $orange;
+		&:hover {
+			color: #fff;
+			background-color: $orange;
+			-moz-transition: all .25s ease-in-out;
+    	-webkit-transition: all .25s ease-in-out;
+    	-o-transition: all .25s ease-in-out;
+    	-ms-transition: all .25s ease-in-out;
+    	transition: all .25s ease-in-out;
+		}
 		@include breakpoint (lg) {
 			width: 160px;
 			height: 50px;
@@ -420,6 +460,21 @@ body {
 		font-size: 20px;
 		margin-top: 6%;
 		margin-left: 9%;
+		a {
+			color: #000000;
+		}
+		&:hover {
+			opacity: 0.7;
+			transform: scale(1.1);
+			-webkit-transform: scale(1.1);
+			-moz-transform: scale(1.1);
+			-o-transform: scale(1.1);
+			-moz-transition: all .25s ease-in-out;
+    		-webkit-transition: all .25s ease-in-out;
+    		-o-transition: all .25s ease-in-out;
+    		-ms-transition: all .25s ease-in-out;
+    		transition: all .25s ease-in-out;
+		}
 	}
 	&__more {
 		font-family: 'Roboto', sans-serif;
@@ -428,6 +483,9 @@ body {
 		margin-left: 9%;
 		a {
 			color: black;
+		}
+		&:hover {
+			text-decoration: underline;
 		}
 	}
 	&__desc {
@@ -452,16 +510,6 @@ body {
 	background-color: $orange;
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
-	grid-template-rows: 240px;
-	@include breakpoint (md) {
-		grid-template-rows: 180px;
-	}
-	@include breakpoint (sm) {
-		grid-template-rows: 130px;
-	}
-	@include breakpoint (sm) {
-		grid-template-rows: 100px;
-	}
 	&__item:first-child {
 		display: flex;
 		justify-content: center;
@@ -470,14 +518,22 @@ body {
 		.wrapper {
 			width: 60%;
 			height: 30%;
+			margin: 84px auto;
 			@include breakpoint (lg) {
 				width: 80%;
 				height: 30%;
+			}
+			@include breakpoint (md) {
+				margin: 63px auto;
 			}
 			@include breakpoint (sm) {
 				width: 100%;
 				height: 10%;
 				text-align: center;
+				margin: 45px auto;
+			}
+			@include breakpoint (xs) {
+				margin: 35px auto;
 			}
 			span {
 				font-family: 'Gilroy-Bold';
@@ -528,6 +584,15 @@ body {
 			color: #fff;
 			border-color: black;
 			margin-left: 100px;
+			&:hover {
+				color: black;
+				background-color: $gray3;
+				-moz-transition: all .25s ease-in-out;
+				-webkit-transition: all .25s ease-in-out;
+				-o-transition: all .25s ease-in-out;
+				-ms-transition: all .25s ease-in-out;
+				transition: all .25s ease-in-out;
+			}
 			@include breakpoint (md) {
 				margin-left: 0;
 			}
@@ -536,6 +601,15 @@ body {
 			background-color:$orange;
 			color: black;
 			margin-left: 16px;
+			&:hover {
+				color: black;
+				background-color: $gray3;
+				-moz-transition: all .25s ease-in-out;
+				-webkit-transition: all .25s ease-in-out;
+				-o-transition: all .25s ease-in-out;
+				-ms-transition: all .25s ease-in-out;
+				transition: all .25s ease-in-out;
+			}
 			@include breakpoint (sm) {
 				display: none;
 			}
@@ -552,17 +626,12 @@ body {
 	
 	&__item {
 		display: flex;
-		height: 370px;
 		margin-top: 70px;
 		@include breakpoint (md) {
-			height: 200px;
 			margin-top: 50px;
 		}
 		@include breakpoint (sm) {
 			margin-top: 30px;
-		}
-		@include breakpoint (xs) {
-			height: 150px;
 		}
 	}
 	&__image {
@@ -573,6 +642,9 @@ body {
 		@include breakpoint (md) {
 			background-position: left;
 		}
+		@include breakpoint (sm) {
+			width: 50%;
+		}
 		@include breakpoint (xs) {
 			width: 60%;
 		}
@@ -581,11 +653,10 @@ body {
 		justify-content: center;
 		align-items: center;
 		width: 65%;
-
 		.wrapper {
 			height: 70%;
 			width: 70%;
-
+			margin: 55px auto;
 		}
 		background-color: $dark-gray1;
 		display: flex;
@@ -607,6 +678,9 @@ body {
 				font-size: 28px;
 				margin-top: 17px;
 			}
+			@include breakpoint (sm) {
+				font-size: 17px;
+			}
 			@include breakpoint (xs) {
 				font-size: 14px;
 			}
@@ -614,6 +688,9 @@ body {
 		&_more {
 			font-size: 18px;
 			margin-top: 60px;
+			&:hover {
+				text-decoration: underline;
+			}
 			a {
 				color: #fff;
 			}
@@ -674,6 +751,12 @@ body {
 	}
 	&__more {
 		height: 10%;
+		a {
+			color: black;
+		}
+		&:hover {
+			text-decoration: underline;
+		}
 	}
 }
 
@@ -683,7 +766,6 @@ a {
 
 .footer {
 	background-color: $gray1;
-	height: 410px;
 	display: flex;
 	justify-content: center;
 	align-items: flex-end;
@@ -704,11 +786,16 @@ a {
 		display: flex;
 		justify-content: space-around;
 		flex-direction: column;
+		margin: 41px auto;
 	}
 	&__item {
 		display: flex;
 		justify-content: center;
 		flex-direction: row;
+		margin-top: 41px;
+		&:first-child {
+			margin-bottom: 41px;
+		}
 		&:last-child {
 			font-size: 14px;
 		}
@@ -724,6 +811,15 @@ a {
 			&__link {
 				font-size: 14px;
 				font-family: 'Gilroy-Bold';
+				&:hover {
+					opacity: 0.7;
+					color: $orange;
+					-moz-transition: all .25s ease-in-out;
+					-webkit-transition: all .25s ease-in-out;
+					-o-transition: all .25s ease-in-out;
+					-ms-transition: all .25s ease-in-out;
+					transition: all .25s ease-in-out;
+				}
 				@include breakpoint (lg) {
 					font-size: 22px;
 				}
@@ -755,6 +851,17 @@ a {
 	&__icon {
 		&:not(:last-child) {
 			margin-right: 24px;
+		}
+		&:hover {
+			transform: scale(1.2);
+			-webkit-transform: scale(1.2);
+			-moz-transform: scale(1.2);
+			-o-transform: scale(1.2);
+			-moz-transition: all .25s ease-in-out;
+			-webkit-transition: all .25s ease-in-out;
+			-o-transition: all .25s ease-in-out;
+			-ms-transition: all .25s ease-in-out;
+			transition: all .25s ease-in-out;
 		}
 		a {
 			display: block;
@@ -811,6 +918,7 @@ a {
 	right: 0;
 	box-shadow: 1px 0 15px 2px rgba(0, 0, 0, 0.4);
 	z-index: 9999;
+	position: fixed;
 }
 
 .toggle-menu {
