--- a/style.scss
+++ b/style.scss
@@ -45,6 +45,10 @@ body {
     font-family: 'Gilroy-Regular';
 }
 
+a {
+	text-decoration: none;
+}
+
 .header {
     display: flex;
     justify-content: center;
@@ -140,9 +144,78 @@ body {
     display: flex;
     list-style-type: none;
     &__link {
+		outline: none;
 		text-decoration: none;
 		color: black;
+		font-size: 20px;
+		&:hover {
+			opacity: 0.7;
+			color: $orange;
+			-moz-transition: all .25s ease-in-out;
+    		-webkit-transition: all .25s ease-in-out;
+    		-o-transition: all .25s ease-in-out;
+    		-ms-transition: all .25s ease-in-out;
+    		transition: all .25s ease-in-out;
+			outline: none;
+			-webkit-outline: none;
+			-moz-outline: none;
+		}
+		&:focus {
+			outline: none;
+			-webkit-outline: none;
+			-moz-outline: none;
+		}
+		@include breakpoint (lg) {
+			font-size: 22px;
+		}
     }
+	&__parent {
+		position: relative;
+	}
+}
+
+.nav__parent:hover .submenu {
+	display: flex;
+}
+
+.submenu {
+	background-color: rgba(255, 255, 255,0.7);;
+	position: absolute;
+	display: none;
+	flex-direction: column;
+	list-style-type: none;
+	padding: 5px;
+	&__item {
+		margin-top: 20px;
+	}
+	&__link {
+		white-space: nowrap;
+		text-decoration: none;
+		color: black;
+		font-size: 18px;
+		&:hover {
+			opacity: 0.7;
+			color: $orange;
+			-moz-transition: all .25s ease-in-out;
+    		-webkit-transition: all .25s ease-in-out;
+    		-o-transition: all .25s ease-in-out;
+    		-ms-transition: all .25s ease-in-out;
+    		transition: all .25s ease-in-out;
+		}
+		&:focus {
+			outline: none;
+			-webkit-outline: none;
+			-moz-outline: none;
+		}
+		@include breakpoint (lg) {
+			font-size: 20px;
+		}
+	}
+}
+
+.submenu_2 {
+	display: none;
+	left: 100%;
 }
 
 .button {
@@ -760,10 +833,6 @@ body {
 	}
 }
 
-a {
-	text-decoration: none;
-}
-
 .footer {
 	background-color: $gray1;
 	display: flex;
@@ -895,7 +964,57 @@ a {
 	background-color: black;
 }
 
+#frame {
+	display: none;
+}
+.form {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	width: 500px;
+	gap: 30px;
+	border: 3px solid $orange;
+	background-color: #fff;
+	&__title {
+		text-transform: uppercase;
+		margin-top: 30px;
+		font-family: 'Gilroy-Regular';
+	}
+	&__item {
+		padding-left: 25px;
+		height: 30px;
+		width: 70%;
+		border: none;
+		border-radius: 30px;
+		text-transform: uppercase;
+		-webkit-box-shadow: 2px 2px 30px 0px rgba(50, 50, 50, 0.3);
+		-moz-box-shadow:    2px 2px 30px 0px rgba(50, 50, 50, 0.3);
+		box-shadow:         2px 2px 30px 0px rgba(50, 50, 50, 0.3);
+		&:focus {
+			outline: none;
+		}
+		&:active {
+			outline: none;
+		}
+	}
+	&__button {
+		background: $orange;
+		color: #fff;
+		width: 200px;
+		height: 40px;
+		font-size: 15px;
+		border-radius: 30px;
+		margin-bottom: 30px;
+	}
+}
 
+.fancybox_container {
+	&:focus {
+		-webkit-outline: none !important;
+		-moz-outline: none !important;
+		outline: none !important;
+	}
+}
 
 .nav-bar {
 	position: absolute;
